# ps1-dev

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  main.c
assets/music/: author.txt
assets/tilemaps/: psx.tiled-session
assets/tilemaps/l1/: L1_wrld.tmx  ts8_in1.tmx  ts8_in2.tmx  ts8_in3.tmx
assets/tilemaps/l1/json/: l1_wrld.json  ts8_in1.json  ts8_in2.json  ts8_in3.json
assets/tilemaps/tilesets/: ts8_bl.tsx  ts8_br.tsx  ts8_in.tsx  ts8_tl.tsx  ts8_tr.tsx
assets/tilemaps/tim/: ts8_bl.tim  ts8_br.tim  ts8_in.tim  ts8_tl.tim  ts8_tr.tim
assets/tim/: RAICHU_4.TIM  alola.tim  capidl  capmv  cappy  cappy.tim  cappy.tpj  crash.tpj  crash16  crash_sm8  fnt_white.tim  fntwht.tim  fntwht8.tim  font.tim  large_map.tpj  level_1.tpj  player.tim  psyduck.tim  raichu.tim  raichu_2.tim  sandbox.tpj  zelda8.tim
assets/vag/: HPUP.VAG  SCORE.VAG  STEP.VAG  STEP2.VAG
fixes/: stdarg.h
gs_projects/: readme.txt
gs_projects/camera/: Main.c  isoconfig.xml
gs_projects/collision/: Main.c  isoconfig.xml
gs_projects/dialog-boxes/: Main.c  isoconfig.xml
gs_projects/draw-primes-in-ot/: Main.c  isoconfig.xml
gs_projects/from-scratch/: Main.c  Map.c
gs_projects/multiple-ots/: Main.c  Makefile
gs_projects/play-sounds-cdda/: Main.c  isoconfig.xml
gs_projects/play-sounds-libsnd/: Makefile  isoconfig.xml
gs_projects/play-sounds-spu/: isoconfig.xml
gs_projects/tim-loading/: Main.c  Makefile  isoconfig.xml
gs_projects/tim-loading/tim/: TREES_16.TIM  TS8_TL.tim  tims.tpj
gs_projects/use-fonts/: Makefile  isoconfig.xml
gs_projects/use-tilemaps/: Makefile  Map.c
lib/header/: AssetManager.h  CdReader.h  CollisionHandler.h  Controller.h  DPad.h  FntLogger.h  Frames.h  GPUBase.h  GameObject.h  JSONParser.h  Logger.h  Map.h  MemUtils.h  SoundEffect.h  StrUtils.h  TextBox.h  TileFetcher.h  Tiled.h  TxtHandler.h
lib/source/: AssetManager.c  CdReader.c  CollisionHandler.c  Controller.c  Frames.c  GPUBase.c  GameObject.c  JSONParser.c  Logger.c  TextBox.c  TileFetcher.c  Tiled.c  TxtHandler.c
projects/: generate-new-project.py
projects/camera/: Main.c  Makefile  isoconfig.xml
projects/cappy-test/: Main.c  Makefile  isoconfig.xml
projects/collision/: Main.c  Makefile  isoconfig.xml
projects/dialog-boxes/: Main.c  Makefile  isoconfig.xml
projects/draw-primes-in-ot/: Main.c  Makefile  isoconfig.xml
projects/drawSprites/project/: constants.h  images.h  main.c  makefile.mak  run.bat
projects/from-scratch/: Main.c  Makefile  Map.c  isoconfig.xml
projects/hello-controllers/: Main.c  Makefile  isoconfig.xml
projects/hello-debug-font/: Main.c  Makefile  isoconfig.xml
projects/hello-fixed-point-math/: Main.c  Makefile  isoconfig.xml
projects/hello-flat-shaded-polys/: Main.c  Makefile  isoconfig.xml
projects/hello-textured-sprites/: Main.c  Makefile  isoconfig.xml
projects/hello_cdda/: Makefile  hello_cdda.c  hello_cdda.cue
projects/multiple-ots/: Main.c  isoconfig.xml
projects/no-libgs/template/: Main.c
projects/play-sounds-cdda/: Main.c  Makefile  isoconfig.xml  move-to-windows.sh  play-sounds-cdda.cue
projects/play-sounds-libsnd/: Main.c  Makefile  isoconfig.xml
projects/play-sounds-spu/: Main.c  Makefile  isoconfig.xml
projects/template/: Main.c  Makefile  isoconfig.xml
projects/tim-loading/: Main.c  isoconfig.xml
projects/tim-loading/tim/: ALOLA_8.TIM
projects/use-fonts/: Main.c  isoconfig.xml
projects/use-tilemaps/: Main.c  isoconfig.xml
tools/: SYSTEM.CNF
